--- a/package.json
+++ b/package.json
@@ -2,9 +2,20 @@
   "name": "greeting-app-js",
   "version": "1.0.0",
   "description": "\"Greeting Message App\"",
-  "main": "server.js",
+  "main": "nodemon server.js",
+  "dependencies": {
+    "body-parser": "^1.19.0",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "joi": "^17.2.1",
+    "mongodb": "^3.6.2",
+    "mongoose": "^5.10.7",
+    "nodemon": "^2.0.4"
+  },
+  "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
@@ -15,17 +26,13 @@
     "RestAPI",
     "MongoDB",
     "Mongoose",
-    "Notes"
+    "Nodemon",
+    "dotenv"
   ],
-  "author": "\"harshita\"",
+  "author": "harshita",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/harshi0806/Greeting-App-JS/issues"
   },
-  "homepage": "https://github.com/harshi0806/Greeting-App-JS#readme",
-  "dependencies": {
-    "body-parser": "^1.19.0",
-    "express": "^4.17.1",
-    "mongoose": "^5.10.6"
-  }
+  "homepage": "https://github.com/harshi0806/Greeting-App-JS#readme"
 }
